# ironfish

./: Cargo.toml
ironfish-rust-java/: Cargo.toml
ironfish-rust-java/src/: hello.rs  lib.bak  lib.rs  mpc.rs  nacl.rs  rolling_filter.rs  signal_catcher.rs
ironfish-rust-java/src/structs/: asset.rs  mod.rs  note.rs  note_encrypted.rs  spend_proof.rs  transaction.rs  witness.rs
ironfish-rust-java/tests/: demo.test.slow.ts
java-rust-demo/: Cargo.toml
java-rust-demo/src/: lib.rs
