[package]
name = "ironfish-rust-java"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.0"
base64 = "0.13.0"
ironfish_rust = { path = "../ironfish-rust" }
napi-derive = "=2.9.1"
# Pinning this can be removed if we eventually move to the latest releases again
napi-derive-backend = "=1.0.38"
ironfish_mpc = { path = "../ironfish-mpc" }

[lib]
crate_type = ["cdylib"]

[build-dependencies]
napi-build = "2.0.1"
